...
        <variable
            name="fragment"
            type="bruzsa.laszlo.dartsapp.ui.home.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/baseLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutTeams"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutModes">

            <TextView
                android:id="@+id/textInfoPlayerTeam1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
...
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHome">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupGameTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleLine="false"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_x_01"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/_X01"
                    android:textAlignment="center"
...
                    app:game_type="@{GameType.CRICKET}"
                    app:settings="@{homeViewModel.settings.generalSettings}" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupX01Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{chipX01.checked ? View.VISIBLE: View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupGameTypes">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipStartScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{(v) -> fragment.showDialogX01StartScore(v)}"
                    android:text="@{Integer.toString(homeViewModel.settings.x01Settings.startScore)}"
                    tools:text="701" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFirstTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{homeViewModel.settings.x01Settings.firstToBestOf.label}"
                    android:onClick="@{(v) -> fragment.changeFirstBest(v)}"
                    tools:text="@string/first_to" />

...
                    android:layout_height="wrap_content"
                    android:onClick="@{(v) -> fragment.showDialogSetLegCount(v)}"
                    android:text="@{String.valueOf(homeViewModel.settings.x01Settings.count)}"
                    tools:text="@string/_2" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMatchType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{(v) -> fragment.changeMatchType(v)}"
                    android:text="@{homeViewModel.settings.x01Settings.matchType.name()}"
                    tools:text="@string/leg" />
            </com.google.android.material.chip.ChipGroup>
...
                    app:checkedIconEnabled="true" />
            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_start_game"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="144dp"
...
