...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top|fill_vertical"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/frameNameScore"
            app:layout_constraintEnd_toStartOf="@+id/layoutTeam2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/textNamePlayer11"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:maxLines="1"
                android:onClick="@{() -> viewModel.setActive(PlayersEnum.PLAYER_1_1)}"
                android:padding="0dp"
                android:text="@{viewModel.playerMap.get(PlayersEnum.PLAYER_1_1).name, default = @string/player_1_1}"
                android:textSize="30sp"
                app:active="@{viewModel.activePlayer}"
                app:player="@{PlayersEnum.PLAYER_1_1}" />
...
                android:textAlignment="textEnd"
                android:textColor="@{viewModel.liveDatasMap.get(Team.TEAM2).possibleCheckout ? Color.GREEN : Color.BLUE }"
                android:textSize="60sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/frameSetsLegs"
                android:onClick="@{view -> viewModel.showGameInfo(view)}"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8sp">

...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|fill_vertical"
                    android:text="@{viewModel.set ? @string/SetLeg: `L`,default = @string/SetLeg}"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textSetPlayer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:text="@{viewModel.liveDatasMap.get(Team.TEAM2).set, default = @string/_0}"
                    android:textSize="24sp"
                    android:visibility="@{viewModel.set ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:id="@+id/textSetPlayer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:text="@{viewModel.liveDatasMap.get(Team.TEAM1).set,default = @string/_0}"
                    android:textSize="24sp"
                    android:visibility="@{viewModel.set ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:id="@+id/textLegPlayer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:text="@{viewModel.liveDatasMap.get(Team.TEAM1).leg,default = @string/_0}"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textLegPlayer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="@{viewModel.liveDatasMap.get(Team.TEAM2).leg,default = @string/_0}"
                    android:textSize="24sp" />
            </FrameLayout>
...
