<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DartsApp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="_00">0 : 0</string>
    <string name="_X01">X01</string>
    <string name="ok">OK</string>
    <string name="_10_n100_n180_n26">10\n100\n180\n26</string>
    <string name="stat">Avg\n100+\n60+\nMax\nMin\nHC</string>
    <string name="player22">Player2</string>
    <string name="cricket">Cricket</string>
    <string name="dartsapp">DartsApp</string>
    <string name="lacika007_gmail_com">lacika007@gmail.com</string>
    <string name="new_game">NEW GAME</string>
    <string name="start_game">Start Game!</string>
    <string name="SetLeg">S\nL</string>
    <string name="player_team_1">Player/Team 1</string>
    <string name="player_team_2">Player/Team 2</string>
    <string name="add_player">add player</string>
    <string name="single">Single</string>
    <string name="player_2_1">Player_2_1</string>
...
    <string name="_100_n60_navg_nmax_nmin_nhc">100+\n60+\nAvg\nMax\nMin\nHC</string>
    <string name="microphone">microphone</string>
    <string name="_0">0</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="textipadress">textIPAdress</string>
    <string name="leg">LEG</string>
    <string name="_1_vs_1">1 vs 1</string>
    <string name="_2_vs_2">2 vs 2</string>
    <string name="_default">Default</string>
    <string name="random">Random</string>
    <string name="first_to">first to</string>
    <string name="_2">2</string>
    <string name="enter_throw_value">Enter throw value</string>
    <string name="repeat_throw_by_text_to_speech">Repeat throw by text-to-speech</string>
    <string name="speech_recognizer">Speech recognizer</string>
    <string name="number_pad">Number Pad</string>
</resources>
