...
            android:id="@+id/textScorePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:text="@{viewModel.score.toString(), default=`501`}"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/listThrows"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
...
